@@ -2,6 +2,8 @@ Revision history for libev, a high-performance and full-featured event loop.
 
         - event_base_loopexit should return 0 on success
           (W.C.A. Wijngaards).
+        - work around poll() potentially not clearing revents
+          field in ev_poll (Brandon Black).
 	- added linux eventfd support.
         - try to autodetect epoll and inotify support
           by libc header version if not using autoconf.
